<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white1"
    tools:context=".Login">


    <Button
        android:id="@+id/btn_login"
        android:layout_width="55dp"
        android:layout_height="53dp"
        android:layout_marginBottom="212dp"
        android:background="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login2"
        android:layout_width="282dp"
        android:layout_height="24dp"
        android:layout_marginBottom="308dp"
        android:background="@drawable/btn_create_account"
        android:text="@string/crear_correo"
        android:textColor="@color/black1"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.798" />

    <Button
        android:id="@+id/btn_create_account2"
        android:layout_width="54dp"
        android:layout_height="49dp"
        android:layout_marginBottom="216dp"
        android:background="@drawable/g1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toEndOf="@+id/btn_login" />

    <TextView
        android:id="@+id/txt_separador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/o"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="224dp"
        android:layout_height="106dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/d1" />

    <TextView
        android:id="@+id/txt_bienvenido"
        android:layout_width="225dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:text="@string/Bienvenido"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txt_registrategratis"
        android:layout_width="151dp"
        android:layout_height="43dp"
        android:layout_marginTop="96dp"
        android:text="@string/Bienvenido1"
        android:textAlignment="center"
        android:textColor="@color/black1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txt_facebook"
        android:layout_width="107dp"
        android:layout_height="22dp"
        android:text="@string/crear_cuenta"
        android:textAlignment="center"
        android:textColor="@color/black1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/txt_google"
        android:layout_width="90dp"
        android:layout_height="21dp"
        android:layout_marginTop="4dp"
        android:text="@string/log_in1"
        android:textAlignment="center"
        android:textColor="@color/black1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_account2" />
</androidx.constraintlayout.widget.ConstraintLayout>